kubernetes/apps/base/game-servers/cmangos-registration/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cmangos-registration
  annotations:
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
  hostnames:
    - 'emberstone.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: cmangos-registration
          port: 80
          weight: 100
